<resources>
    <string name="app_name">VxResumeBuilder</string>
    <string name="mobile_number">Mobile Number</string>
    <string name="save">Save</string>
    <string name="next">Next</string>
    <string name="fullName">Full Name*</string>
    <string name="email">Email*</string>
    <string name="mobileNumber">Mobile Number*</string>
    <string name="residenceAddress">Residence Address*</string>
    <string name="school">School*</string>
    <string name="completionYear">Completion Year*</string>
    <string name="gpa">CGPA</string>
    <string name="grade">Grade</string>
    <string name="add">Add</string>
    <string name="projectTitle">Project Title*</string>
    <string name="companyName">Company Name*</string>
    <string name="description">Description*</string>
    <string name="resumeDescription">About Me*</string>
    <string name="duration">Duration / Time*</string>
    <string name="role">Role*</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="personal_info">Personal Info</string>
    <string name="education">Education</string>
    <string name="experience">Experience</string>
    <string name="project_details">Project Details</string>
    <string name="view_details">View Details</string>
    <string name="empty_validation_message_resume_title">Please enter your resume title</string>
    <string name="enter_fullname">Please enter your fullName</string>
    <string name="enter_email">Please enter a valid email</string>
    <string name="enter_mobile">Please enter a valid mobile</string>
    <string name="enter_address">Please enter your resident address</string>
    <string name="update">Update Info</string>
    <string name="useEditFunction">"Use Edit "</string>
    <string name="cancel">Cancel</string>
    <string name="resumeTitle">Resume Title*</string>
    <string name="enter_school_name">Please key in School Name</string>
    <string name="enter_completion_year">Please key in completion year</string>
    <string name="projectClientName">Client Name*</string>
    <string name="position">Position*</string>
    <string name="enter_project_title">Please enter project title</string>
    <string name="enter_client_information">Please enter client information</string>
    <string name="enter_duration">Enter project duration</string>
    <string name="enter_duration_work">Enter work duration</string>
    <string name="enter_projct_desciption">Please enter project description</string>
    <string name="enter_project_role">Please enter your project role</string>
    <string name="enter_company_name">Please enter company name</string>
    <string name="enter_position_information">Please enter position information</string>
    <string name="enter_desciption_work">Please enter work description</string>
</resources>