<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginStart="20dp"
        android:layout_marginTop="20dp"
        android:layout_marginEnd="20dp">

        <androidx.core.widget.NestedScrollView
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_margin="10dp"
                android:orientation="vertical">

                <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/edtFSchool"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10dp"
                    app:boxBackgroundColor="@android:color/transparent"
                    app:helperTextTextColor="?attr/colorError"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/profile_image">

                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/edtSchool"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:hint="@string/school" />

                </com.google.android.material.textfield.TextInputLayout>

                <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/edtFCompletionYear"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10dp"
                    app:boxBackgroundColor="@android:color/transparent"
                    app:helperTextTextColor="?attr/colorError"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/profile_image">

                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/completionYear"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:hint="@string/completionYear"
                        android:maxLength="4"
                        android:inputType="number" />

                </com.google.android.material.textfield.TextInputLayout>

                <com.google.android.material.textfield.TextInputLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10dp"
                    app:boxBackgroundColor="@android:color/transparent"
                    app:helperTextTextColor="?attr/colorError"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/profile_image">

                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/gpa"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:hint="@string/gpa"
                        android:inputType="numberDecimal" />

                </com.google.android.material.textfield.TextInputLayout>

                <com.google.android.material.textfield.TextInputLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10dp"
                    app:boxBackgroundColor="@android:color/transparent"
                    app:helperTextTextColor="?attr/colorError"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/profile_image">

                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/grade"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:hint="@string/grade"
                        android:inputType="text" />

                </com.google.android.material.textfield.TextInputLayout>

                <androidx.appcompat.widget.AppCompatButton
                    android:id="@+id/btnNextEducationInfo"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="40dp"
                    android:background="@drawable/rounded_btn"
                    android:text="@string/add"
                    android:textColor="@color/white"
                    android:textStyle="bold" />

            </LinearLayout>
        </androidx.core.widget.NestedScrollView>
    </androidx.constraintlayout.widget.ConstraintLayout>

</androidx.constraintlayout.widget.ConstraintLayout>