<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginStart="20dp"
        android:layout_marginTop="20dp"
        android:layout_marginEnd="20dp">

        <androidx.core.widget.NestedScrollView
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_margin="10dp"
                android:orientation="vertical">

                <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/edtRCompanyName"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10dp"
                    app:boxBackgroundColor="@android:color/transparent"
                    app:helperTextTextColor="?attr/colorError"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/profile_image">

                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/edtCompanyName"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:hint="@string/companyName" />

                </com.google.android.material.textfield.TextInputLayout>

                <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/edtRPosition"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10dp"
                    app:boxBackgroundColor="@android:color/transparent"
                    app:helperTextTextColor="?attr/colorError"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/edtRCompanyName">

                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/edtPosition"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:hint="@string/position"
                        android:inputType="text" />

                </com.google.android.material.textfield.TextInputLayout>

                <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/edtRDuration"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10dp"
                    app:boxBackgroundColor="@android:color/transparent"
                    app:helperTextTextColor="?attr/colorError"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/edtRPosition">

                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/edtDuration"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:hint="@string/duration"
                        android:inputType="text" />

                </com.google.android.material.textfield.TextInputLayout>


                <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/edtRDescription"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10dp"
                    app:boxBackgroundColor="@android:color/transparent"
                    app:helperTextTextColor="?attr/colorError"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/edtRDuration">


                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/edtDescription"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:gravity="top"
                        android:hint="@string/description"
                        android:inputType="textEmailAddress|textMultiLine"
                        android:lines="30"
                        android:minLines="5"
                        android:scrollbars="vertical"
                        android:scrollHorizontally="false" />

                </com.google.android.material.textfield.TextInputLayout>

                <androidx.appcompat.widget.AppCompatButton
                    android:id="@+id/btn_next_experience_info"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="40dp"
                    android:background="@drawable/rounded_btn"
                    android:text="@string/add"
                    android:textColor="@color/white"
                    android:textStyle="bold" />

            </LinearLayout>

        </androidx.core.widget.NestedScrollView>

    </androidx.constraintlayout.widget.ConstraintLayout>

</androidx.constraintlayout.widget.ConstraintLayout>